--- a/faq.html
+++ b/faq.html
@@ -15,20 +15,49 @@
 	<header>
 		<h1>FAQ</h1>
 	</header>
-	<button class="accordion">Section 1</button>
-	<div class="panel">
-	  <p>Lorem ipsum...</p>
-	</div>
 
-	<button class="accordion">Section 2</button>
-	<div class="panel">
-	  <p>Lorem ipsum...</p>
-	</div>
 
-	<button class="accordion">Section 3</button>
+<nav>
+	<ul class="cd-faq-categories">
+		<li><a href="#first">Erste Schritte</a></li>
+		<li><a href="#support">Support</a></li>
+		<li><a href="#bezahlungen">Bezahlungen</a></li>
+		<li><a href="#datenschutz">Datenschutz</a></li>
+		<li><a href="#kontakt">Kontakt</a></li>
+	</ul> <!-- cd-faq-categories -->
+</nav>
+
+<section id="first">
+	<button class="accordion">Erste Schritte</button>
 	<div class="panel">
-	  <p>Lorem ipsum...</p>
+		<p>Lorem ipsum...</p>
 	</div>
+</section>
+<section id="support">
+	<button class="accordion">Support</button>
+	<div class="panel">
+		<p>Lorem ipsum...</p>
+	</div>
+</section>
+<section id="bezahlungen">
+	<button class="accordion">Bezahlungen</button>
+	<div class="panel">
+		<p>Lorem ipsum...</p>
+	</div>
+</section>
+<section id="datenschutz">
+	<button class="accordion">Datenschutz</button>
+	<div class="panel">
+		<p>Lorem ipsum...</p>
+	</div>
+</section>
+<section id="kontakt">
+	<button class="accordion">Kontakt</button>
+	<div class="panel">
+		<p>Lorem ipsum...</p>
+	</div>
+</section>
+
 
 <script src="js/accordion.js"></script>
 </body>
