hover ready FAQ

--- a/Geschichte.html
+++ b/Geschichte.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
-	<link rel="stylesheet" href="css/styles.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="css/modals.css"> <!-- Modals style -->
-	<title>SilverBit</title>
+	<title>Geschichte SilverBit</title>
 </head>
 <body>
 	<header>
 		<h1>Geschichte</h1>
+		<img src="img/hercules.gif" alt="hercules">
 	</header>
 	<section id="cd-timeline" class="cd-container">
 		<div class="cd-timeline-block">
