--- a/faq.html
+++ b/faq.html
@@ -5,12 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
 	<link rel="stylesheet" href="css/grid.css"> <!-- To specify the rows and columns properties-->
-	<link rel="stylesheet" href="css/styles.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="css/modals.css"> <!-- Modals style -->
 
 
 
-	<title>SilverBit</title>
+	<title>FAQ SilverBit</title>
 </head>
 <body>
 	<header>
@@ -18,7 +18,7 @@
 	</header>
 
 <main class="row">
-	<nav class="col-2">
+	<nav class="col-2 button  menu">
 		<ul class="">
 			<li><a href="#first">Erste Schritte</a></li>
 			<li><a href="#support">Support</a></li>
@@ -28,34 +28,62 @@
 		</ul> <!-- cd-faq-categories -->
 	</nav>
 	<section class="col-9">
+		<h3>Erste Schritte</h3>
+
 		<section id="first">
-			<button class="accordion">Erste Schritte</button>
-			<div class="panel">
-				<p>Lorem ipsum...</p>
+			<div class="accopanel">
+				<button class="accordion ">Erste Schritte?</button>
+				<div class="panel">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+				</div>
 			</div>
+
+			<div class="row">
+			</div>
+			<button class="accordion ">Zweite Schritte?</button>
+			<div class="panel">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+			</div>
+
 		</section>
+		<h3>Support</h3>
 		<section id="support">
-			<button class="accordion">Support</button>
+			<button class="accordion ">Support</button>
 			<div class="panel">
-				<p>Lorem ipsum...</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+			</div>
+			<div class="row">
+			</div>
+			<button class="accordion ">Erste Schritte?</button>
+			<div class="panel">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
+			</div>
+			<div class="row">
+			</div>
+			<button class="accordion ">Zweite Schritte?</button>
+			<div class="panel">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
 			</div>
 		</section>
+		<h3>Bezahlungen</h3>
 		<section id="bezahlungen">
-			<button class="accordion">Bezahlungen</button>
+			<button class="accordion ">Bezahlungen</button>
 			<div class="panel">
-				<p>Lorem ipsum...</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
 			</div>
 		</section>
+		<h3>Datenschutz</h3>
 		<section id="datenschutz">
-			<button class="accordion">Datenschutz</button>
+			<button class="accordion ">Datenschutz</button>
 			<div class="panel">
-				<p>Lorem ipsum...</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
 			</div>
 		</section>
+		<h3>Kontakt</h3>
 		<section id="kontakt">
-			<button class="accordion">Kontakt</button>
+			<button class="accordion ">Kontakt</button>
 			<div class="panel">
-				<p>Lorem ipsum...</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cupiditate et laudantium esse adipisci consequatur modi possimus accusantium vero atque excepturi nobis in doloremque repudiandae soluta non minus dolore voluptatem enim reiciendis officia voluptates, fuga ullam? Voluptas reiciendis cumque molestiae unde numquam similique quas doloremque non, perferendis doloribus necessitatibus itaque dolorem quam officia atque perspiciatis dolore laudantium dolor voluptatem eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit ullam, consequuntur, saepe voluptas quaerat deleniti. Repellendus magni sint temporibus, accusantium rem commodi?</p>
 			</div>
 		</section>
 	</section>
