--- a/faq.html
+++ b/faq.html
@@ -18,13 +18,14 @@
 	</header>
 
 <main class="row">
-	<nav class="col-2 button  menu">
+	<nav class="col-3 ">
 		<ul class="">
-			<li><a href="#first">Erste Schritte</a></li>
-			<li><a href="#support">Support</a></li>
-			<li><a href="#bezahlungen">Bezahlungen</a></li>
-			<li><a href="#datenschutz">Datenschutz</a></li>
-			<li><a href="#kontakt">Kontakt</a></li>
+			<li class="button"><a  href="#first">Erste Schritte</a></li>
+
+			<li class="button"><a  href="#support">Support</a></li>
+			<li class="button"><a  href="#bezahlungen">Bezahlungen</a></li>
+			<li class="button"><a  href="#datenschutz">Datenschutz</a></li>
+			<li class="button"><a  href="#kontakt">Kontakt</a></li>
 		</ul> <!-- cd-faq-categories -->
 	</nav>
 	<section class="col-9">
