--- a/Geschichte.html
+++ b/Geschichte.html
@@ -5,65 +5,49 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
 	<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/timeline.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="css/modals.css"> <!-- Modals style -->
 	<title>Geschichte SilverBit</title>
 </head>
 <body>
 	<header>
 		<h1>Geschichte</h1>
-		<img src="img/hercules.gif" alt="hercules">
 	</header>
 	<section id="cd-timeline" class="cd-container">
-		<div class="cd-timeline-block">
+		<!--+++++++++++++++++++++++++++++++Block 1++++++++++++++++++++++++++++------->
 
+		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
-				<h2>Title of section 1</h2>
+				<h2>Grundung</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-
-
-				<!-- Trigger/Open The Modal -->
-				<button id="myBtn1" class="cd-read-more">Read more</button>
-
-				<!-- The Modal -->
-				<div id="myModal1" class="modal">
-
-				  <!-- Modal content -->
-				  <div class="modal-content">
+				<button id="myBtn1" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
+				<div id="myModal1" class="modal"> <!-- The Modal -->
+				  <div class="modal-content"><!-- Modal content -->
 				    <span id="s1" class="close">&times;</span>
 						<img src="img/pexels-photo.jpg" alt="Picture">
 				    <p>Some text in the Modal..</p>
-
 				  </div>
-
 				</div>
+				<span class="cd-date">Jan 14 1963</span>
+			</div>
+		</div>
 
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date">Jan 14</span>
-			</div> <!-- cd-timeline-content -->
-
-		</div> <!-- cd-timeline-block -->
+		<img src="img/officebuilding.jpg" alt="building">
+		<!--+++++++++++++++++++++++++++++++Block 2++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 				<img src="img/cd-icon-movie.svg" alt="Movie">
-			</div> <!-- cd-timeline-img -->
-
+			</div>
 			<div class="cd-timeline-content">
-				<h2>Title of section 2</h2>
+				<h2>Oracle becomes a partner</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-
-				<!-- Trigger/Open The Modal -->
-				<button id="myBtn2" class="cd-read-more">Read more</button>
-
-				<!-- The Modal -->
-				<div id="myModal2" class="modal">
-
-				  <!-- Modal content -->
-				  <div class="modal-content">
+				<button id="myBtn2" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
+				<div id="myModal2" class="modal"><!-- The Modal -->
+				  <div class="modal-content"><!-- Modal content -->
 				    <span id="s2" class="close">&times;</span>
 						<video width="400" controls>
   					<source src="mp4/baby.mp4" type="video/mp4">
@@ -71,82 +55,76 @@
 						</video>
 				    <p>Some text in the Modal..</p>
 				  </div>
-
 				</div>
+				<span class="cd-date">Jan 18 1998</span>
+			</div>
+		</div>
 
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date">Jan 18</span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
+		<img src="img/oracle.png" alt="oracle">
+		<!--+++++++++++++++++++++++++++++++Block 3++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
-				<h2>Title of section 3</h2>
+				<h2>Neue Filial in Guatemala</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
 				<!-- Trigger/Open The Modal -->
 				<button id="myBtn3" class="cd-read-more">Read more</button>
-
 				<!-- The Modal -->
 				<div id="myModal3" class="modal">
-
 				  <!-- Modal content -->
 				  <div class="modal-content">
 				    <span id="s3" class="close">&times;</span>
 				    <p>Some text in the Modal..</p>
 				  </div>
-
 				</div>
-
-
 				<!-- <a href="#0" class="cd-read-more">Read more</a> -->
 				<span class="cd-date">Jan 24</span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
+			</div>
+		</div>
+		<img src="img/GuateFilial.png" alt="guatefilial">
+		<!--+++++++++++++++++++++++++++++++Block 4++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
 				<img src="img/cd-icon-location.svg" alt="Location">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
-				<h2>Title of section 4</h2>
+				<h2>"Beste Arbeitsatmosphäre" -Nicola Tesla </h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 				<a href="#0" class="cd-read-more">Read more</a>
 				<span class="cd-date">Feb 14</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
-
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
 				<img src="img/cd-icon-location.svg" alt="Location">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
-				<h2>Title of section 5</h2>
+				<h2>Neue Filiale in Mexiko</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
 				<a href="#0" class="cd-read-more">Read more</a>
 				<span class="cd-date">Feb 18</span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
+			</div>
+		</div>
+		<img src="img/arbeitsatmosphäre.png" alt="atmo">
+		<!--+++++++++++++++++++++++++++++++Block 5++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 				<img src="img/cd-icon-movie.svg" alt="Movie">
-			</div> <!-- cd-timeline-img -->
-
+			</div>
 			<div class="cd-timeline-content">
-				<h2>Final Section</h2>
+				<h2>Bichilla becames Google's owner</h2>
 				<p>This is the content of the last section</p>
 				<span class="cd-date">Feb 26</span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
-	</section> <!-- cd-timeline -->
+			</div>
+		</div>
+		<img src="img/Google.png" alt="">
+	</section>
 	<script type="text/javascript" src="js/modals.js"></script> <!-- modals javascript -->
-
 </body>
 <!--Quelle-->
 <!--Timeline template  https://codyhouse.co/gem/vertical-timeline/-->
