improve timeline correct images better sizes

--- a/team.html
+++ b/team.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
-	<link rel="stylesheet" href="css/grid.css"> <!-- To specify the rows and columns properties-->
+	<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
 	<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
-	<link rel="stylesheet" href="css/modals.css"> <!-- Modals style -->
+	<link rel="stylesheet" href="css/GusModals.css"> <!-- Modals style -->
 
 
 
