--- a/Geschichte.html
+++ b/Geschichte.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
 	<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="css/timeline.css"> <!-- Resource style -->
-	<link rel="stylesheet" href="css/modals.css"> <!-- Modals style -->
+	<link rel="stylesheet" href="css/GusModals.css"> <!-- Modals style -->
 	<title>Geschichte SilverBit</title>
 </head>
 <body>
@@ -27,15 +27,13 @@
 				<div id="myModal1" class="modal"> <!-- The Modal -->
 				  <div class="modal-content"><!-- Modal content -->
 				    <span id="s1" class="close">&times;</span>
-						<img src="img/pexels-photo.jpg" alt="Picture">
+						<img class="imgPanel" src="img/officebuilding.jpg" alt="building">
 				    <p>Some text in the Modal..</p>
 				  </div>
 				</div>
 				<span class="cd-date">Jan 14 1963</span>
 			</div>
 		</div>
-
-		<img src="img/officebuilding.jpg" alt="building">
 		<!--+++++++++++++++++++++++++++++++Block 2++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
@@ -49,9 +47,8 @@
 				<div id="myModal2" class="modal"><!-- The Modal -->
 				  <div class="modal-content"><!-- Modal content -->
 				    <span id="s2" class="close">&times;</span>
-						<video width="400" controls>
-  					<source src="mp4/baby.mp4" type="video/mp4">
-  						Your browser does not support HTML5 video.
+						<video width="640" height="480" controls>
+					  <source src="mp4/oracle.mp4" type="video/mp4">
 						</video>
 				    <p>Some text in the Modal..</p>
 				  </div>
@@ -60,44 +57,50 @@
 			</div>
 		</div>
 
-		<img src="img/oracle.png" alt="oracle">
 		<!--+++++++++++++++++++++++++++++++Block 3++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/cd-icon-picture.svg" alt="Picture">
-			</div> <!-- cd-timeline-img -->
+				<img src="img/cd-icon-location.svg" alt="Location">
+			</div>
 			<div class="cd-timeline-content">
 				<h2>Neue Filial in Guatemala</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-				<!-- Trigger/Open The Modal -->
-				<button id="myBtn3" class="cd-read-more">Read more</button>
-				<!-- The Modal -->
-				<div id="myModal3" class="modal">
-				  <!-- Modal content -->
-				  <div class="modal-content">
-				    <span id="s3" class="close">&times;</span>
+				<button id="myBtn3" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
+				<div id="myModal3" class="modal"><!-- The Modal -->
+				  <div class="modal-content"><!-- Modal content -->
+						<span id="s3" class="close">&times;</span>
+						<img class="imgPanel" src="img/GuateFilial.png" alt="guatefilial">
 				    <p>Some text in the Modal..</p>
 				  </div>
 				</div>
-				<!-- <a href="#0" class="cd-read-more">Read more</a> -->
 				<span class="cd-date">Jan 24</span>
 			</div>
 		</div>
-		<img src="img/GuateFilial.png" alt="guatefilial">
 		<!--+++++++++++++++++++++++++++++++Block 4++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
-				<img src="img/cd-icon-location.svg" alt="Location">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content">
 				<h2>"Beste Arbeitsatmosphäre" -Nicola Tesla </h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-				<a href="#0" class="cd-read-more">Read more</a>
+				<button id="myBtn4" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
+				<div id="myModal4" class="modal"><!-- The Modal -->
+					<div class="modal-content"><!-- Modal content -->
+						<span id="s4" class="close">&times;</span>
+						<img class="imgPanel" src="img/arbeitsatmosphäre.png" alt="Picture">
+				    <p>Some text in the Modal..</p>
+				  </div>
+				</div>
 				<span class="cd-date">Feb 14</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
+
+<!--+++++++++++++++++++++++++++++++Block 5++++++++++++++++++++++++++++------->
+
+
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
 				<img src="img/cd-icon-location.svg" alt="Location">
@@ -105,26 +108,40 @@
 			<div class="cd-timeline-content">
 				<h2>Neue Filiale in Mexiko</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-				<a href="#0" class="cd-read-more">Read more</a>
+				<button id="myBtn5" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
+				<div id="myModal5" class="modal"><!-- The Modal -->
+					<div class="modal-content"><!-- Modal content -->
+						<span id="s5" class="close">&times;</span>
+						<img class="imgPanel" src="img/mexico.png" alt="atmo">
+						<p>Some text in the Modal..</p>
+					</div>
+				</div>
 				<span class="cd-date">Feb 18</span>
 			</div>
 		</div>
-		<img src="img/arbeitsatmosphäre.png" alt="atmo">
-		<!--+++++++++++++++++++++++++++++++Block 5++++++++++++++++++++++++++++------->
+		<!--+++++++++++++++++++++++++++++++Block 6++++++++++++++++++++++++++++------->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
-				<img src="img/cd-icon-movie.svg" alt="Movie">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div>
 			<div class="cd-timeline-content">
 				<h2>Bichilla becames Google's owner</h2>
 				<p>This is the content of the last section</p>
+				<button id="myBtn6" class="cd-read-more">Read more</button><!-- Trigger/Open The Modal -->
+				<div id="myModal6" class="modal"><!-- The Modal -->
+					<div class="modal-content"><!-- Modal content -->
+						<span id="s6" class="close">&times;</span>
+						<img class="imgPanel" src="img/Google.png" alt="">
+				    <p>Some text in the Modal..</p>
+				  </div>
+				</div>
 				<span class="cd-date">Feb 26</span>
 			</div>
 		</div>
-		<img src="img/Google.png" alt="">
 	</section>
-	<script type="text/javascript" src="js/modals.js"></script> <!-- modals javascript -->
+
+	<script type="text/javascript" src="js/GusModals.js"></script> <!-- modals javascript -->
 </body>
 <!--Quelle-->
 <!--Timeline template  https://codyhouse.co/gem/vertical-timeline/-->
