team fotos profil css

--- a/team.html
+++ b/team.html
@@ -18,7 +18,28 @@
 	</header>
 
 <main class="row">
+	<section class="col-4">
+		<div class="profil">
+				<img class="imgteam" src="img/mari.png" alt="mari">
+			<h1>Mari Aceña</h1>
 
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+
+		</div>
+	</section>
+	<section class="col-4">
+		<div class="profil">
+			<img class="imgteam" src="img/Jess.png" alt="">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+		</div>
+	</section>
+	<section class="col-4">
+		<div class="profil">
+			<img class="imgteam" src="img/Gustavo.png" alt="gustavo">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+		</div>
+
+	</section>
 </main>
 </body>
 <!--Quelle-->
