--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
-	<link rel="stylesheet" href="css/grid.css"> <!-- To specify the rows and columns properties-->
+	<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
 	<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="css/modals.css"> <!-- Modals style -->
 
@@ -12,14 +12,14 @@
 
 	<title>FAQ SilverBit</title>
 </head>
-<body>
+<body class="cuerpo">
 	<header>
 		<h1>FAQ</h1>
 	</header>
 
 <main class="row">
 	<nav class="col-4">
-		<div class="navfix">
+		<div class="">
 			<a class="button"  href="#first">Erste Schritte</a>
 			<a class="button" href="#support">Support</a>
 			<a class="button" href="#bezahlungen">Bezahlungen</a>
