--- a/team.html
+++ b/team.html
@@ -30,12 +30,14 @@
 	<section class="col-4">
 		<div class="profil">
 			<img class="imgteam" src="img/Jess.png" alt="">
+			<h1>Jessica Hempel</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 		</div>
 	</section>
 	<section class="col-4">
 		<div class="profil">
 			<img class="imgteam" src="img/Gustavo.png" alt="gustavo">
+			<h1>Gustavo Lastra</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 		</div>
 
