--- a/index.html
+++ b/index.html
@@ -4,26 +4,31 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title> Bitchilla Web-Development</title>
-		<link rel="stylesheet" href="css/style-index.css" type="text/css">
-		<link rel="stylesheet" href="css/GusGrid.css">
-		 <link rel="stylesheet" href="css/GusStyles.css"><!--  Resource style -->
+
+		<link rel="stylesheet" href="style-header-nav-footer.css" type="text/css">
+		<link rel="stylesheet" href="css/style-grid.css" type="text/css">
+		<link rel="stylesheet" href="css/style-index-content.css" type="text/css">
+
+
+		<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
+		<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
+
 	</head>
-	<body>
+	<body clas="cuerpoTeam" id="Startseite">
 		<header id="nav-menue">
-			<div class="logo"> <img src="img/logo.png" alt="logo"> </div>
+			<div class="logo"><a href="../startseite/index.html"><img src="logo.png" alt="logo"></a> </div>
 			<nav id="togglesteuerung">
 				<ul>
 					<li><a href="#">&Uuml;ber Uns</a>
 						<ul>
-							<li><a href="team.html">Team</a></li>
-							<li><a href="Geschichte.html">Geschichte</a></li>
+							<li><a href="#">Team</a></li>
+							<li><a href="#">Geschichte</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Leistungen</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="#">Karriere</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-					<li><a href="#">Kontakt</a></li>
+					<li><a href="#">FAQ</a></li>
 				</ul>
 			</nav>
 			<a class="menue-button menue-button-beschr-close"
@@ -32,57 +37,55 @@
 			href="#nav-menue">&#9776;</a>
 		</header>
 		<main>
-
-			<div class="row">
-				<section class="col-4">
-					<div class="profil">
-							<img class="imgteam" src="img/mari.png" alt="mari">
-						<h1>Mari Aceña</h1>
-
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-
+			<section class="col-4">
+				<div class="profil">
+						<img class="imgteam" src="img/mari.png" alt="mari">
+					<h1 class="nameTeam">Mari Aceña</h1>
+					<div class="row">
 					</div>
-				</section>
-				<section class="col-4">
-					<div class="profil">
-						<img class="imgteam" src="img/Jess.png" alt="">
-						<h1>Jessica Hempel</h1>
+					<div class="row">
+					</div>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+				</div>
+				<div class="row">
+				</div>
+				<div class="row" style="text-align: center">
+				</div>
+
+			</section>
+			<section class="col-4">
+				<div class="profil">
+					<img class="imgteam" src="img/Jess.png" alt="">
+					<h1 class="nameTeam">Jessica Hempel</h1>
+					<div class="row">
 					</div>
-				</section>
-				<section class="col-4">
-					<div class="profil">
-						<img class="imgteam" src="img/Gustavo.png" alt="gustavo">
-						<h1>Gustavo Lastra</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					<div class="row">
 					</div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+				</div>
+				<div class="row">
+				</div>
+				<div class="row" style="text-align:center">
+				</div>
 
-				</section>
-
-			</div>
-
-
-			
-			<section>
-				<p>Etiam molestie libero eget blandit vehicula. Integer volutpat, neque a commodo convallis, massa sapien elementum enim, non
-						bibendum sem odio luctus magna. Etiam ac risus at ligula lobortis blandit ut vitae sapien. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Praesent ac rhoncus magnaEtiam molestie libero eget blandit vehicula. Integer volutpat, neque a commodo convallis, massa sapien elementum enim, non
-						bibendum sem odio luctus magna. Etiam ac risus at ligula lobortis blandit ut vitae sapien. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Praesent ac rhoncus magnaEtiam molestie libero eget blandit vehicula. Integer volutpat, neque a commodo convallis, massa sapien elementum enim, non
-						bibendum sem odio luctus magna. Etiam ac risus at ligula lobortis blandit ut vitae sapien. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Praesent ac rhoncus magnaEtiam molestie libero eget blandit vehicula. Integer volutpat, neque a commodo convallis, massa sapien elementum enim, non
-						bibendum sem odio luctus magna. Etiam ac risus at ligula lobortis blandit ut vitae sapien. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Praesent ac rhoncus magnaEtiam molestie libero eget blandit vehicula. Integer volutpat, neque a commodo convallis, massa sapien elementum enim, non
-						bibendum sem odio luctus magna. Etiam ac risus at ligula lobortis blandit ut vitae sapien. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Praesent ac rhoncus magnaEtiam molestie libero eget blandit vehicula. Integer volutpat, neque a commodo convallis, massa sapien elementum enim, non
-						bibendum sem odio luctus magna. Etiam ac risus at ligula lobortis blandit ut vitae sapien. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Praesent ac rhoncus magnaEtiam molestie libero eget blandit vehicula. Integer volutpat, neque a commodo convallis, massa sapien elementum enim, non
-						bibendum sem odio luctus magna. Etiam ac risus at ligula lobortis blandit ut vitae sapien. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Praesent ac rhoncus magna</p>
+			</section>
+			<section class="col-4">
+				<div class="profil">
+					<img class="imgteam" src="img/Gustavo.png" alt="gustavo">
+					<h1 class="nameTeam">Gustavo Lastra</h1>
+					<div class="row">
+					</div>
+					<div class="row">
+					</div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+				</div>
+				<div class="row">
+				</div>
+				<div style="text-align:center" class="row" >
+				</div>
 			</section>
 		</main>
-		<footer>
-			<p> FOOTER </p>
+		<footer >
 		</footer>
 	</body>
 </html>
