--- a/faqH.html
+++ b/faqH.html
@@ -9,9 +9,10 @@
 		<link rel="stylesheet" href="css/style-grid.css" type="text/css">
 		<link rel="stylesheet" href="css/style-index-content.css" type="text/css">
 
-		<link rel="stylesheet" href="css/modals.css"> <!-- Modals style -->
+
 		<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
+		<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
 
 	</head>
 	<body clas="cuerpoTeam" id="Startseite">
@@ -155,5 +156,6 @@
 				</section>
 		</div>
 		<script src="js/accordion.js"></script>
+
 	</body>
 </html>
