--- a/teamH.html
+++ b/teamH.html
@@ -12,6 +12,7 @@
 
 		<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
+		<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
 
 	</head>
 	<body clas="cuerpoTeam" id="Startseite">
@@ -86,7 +87,6 @@
 			</section>
 
 		</main>
-
 	</body>
 
 </html>
