specific css definiert

--- a/GeschichteH.html
+++ b/GeschichteH.html
@@ -5,16 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title> Bitchilla Web-Development</title>
 
-		<link rel="stylesheet" href="style-header-nav-footer.css" type="text/css">
-		<link rel="stylesheet" href="css/style-grid.css" type="text/css">
-		<link rel="stylesheet" href="css/style-index-content.css" type="text/css">
 
 
-		<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
+		<link rel="stylesheet" href="css/GusGeschichte.css"> <!-- Resource style -->
+		<link rel="stylesheet" href="css/GusTags.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
 		<link rel="stylesheet" href="css/GusModals.css"> <!-- Modals style -->
 		<link rel="stylesheet" href="css/timeline.css"> <!-- Resource style -->
-		<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
+
 
 	</head>
 	<body class="cuerpo" id="Startseite">
@@ -169,11 +167,18 @@
 					</div>
 				</div>
 			</section>
-
 			<script type="text/javascript" src="js/GusModals.js"></script> <!-- modals javascript -->
-
 		</main>
-		<footer >
+		<!--footer
+		<footer class="" >
+		</footer-->
+		<footer>
+			<a href="https://www.facebook.com"><img src="img/fb-logo.png" alt="facebook logo"></a>
+			<a href="https://www.twitter.com"><img src="img/twitter-logo.png" alt="twitter logo"></a>
+			<a href="https://www.plus.google.com"><img src="img/google-logo.png" alt="google plus logo"></a>
+			<a href="https://de.linkedin.com/"><img src="img/linked-logo.png" alt="linked in logo"></a>
+			<br>&#9400; 2017 All rights reserved by Bitchilla | <a href="#">Impressum</a>
 		</footer>
+
 	</body>
 </html>
