--- a/teamH.html
+++ b/teamH.html
@@ -5,20 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title> Bitchilla Web-Development</title>
 
-		<link rel="stylesheet" href="style-header-nav-footer.css" type="text/css">
-		<link rel="stylesheet" href="css/style-grid.css" type="text/css">
-		<link rel="stylesheet" href="css/style-index-content.css" type="text/css">
 
-
-		<link rel="stylesheet" href="css/GusStyles.css"> <!-- Resource style -->
+		<link rel="stylesheet" href="css/GusTeam.css"> <!-- Resource style -->
+		<link rel="stylesheet" href="css/GusTags.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
-		<link rel="stylesheet" href="css/reset.css"> <!-- To Normalize browsers defaults css-->
 
 	</head>
 	<body clas="cuerpoTeam" id="Startseite">
 		<header id="nav-menue">
 			<div class="logo"><a href="../startseite/index.html"><img src="logo.png" alt="logo"></a> </div>
-			<nav class="jessnav"id="togglesteuerung">
+			<nav class=""id="togglesteuerung">
 				<ul>
 					<li><a href="#">&Uuml;ber Uns</a>
 						<ul>
@@ -46,11 +42,13 @@
 					</div>
 					<div class="row">
 					</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+						<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 				</div>
 				<div class="row">
 				</div>
-				<div class="row" style="text-align: center">
+				<div class="row">
+				</div>
+				<div class="row">
 				</div>
 
 			</section>
@@ -62,11 +60,13 @@
 					</div>
 					<div class="row">
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-				</div>
-				<div class="row">
-				</div>
-				<div class="row" style="text-align:center">
+					<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					<div class="row">
+					</div>
+					<div class="row">
+					</div>
+					<div class="row">
+					</div>
 				</div>
 
 			</section>
@@ -78,15 +78,31 @@
 					</div>
 					<div class="row">
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					<p class="teamP" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 				</div>
 				<div class="row">
+					<div class="col-12">
+					</div>
 				</div>
-				<div style="text-align:center" class="row" >
+				<div class="row">
+					<div class="col-12">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+					</div>
 				</div>
 			</section>
 
 		</main>
+
+		<footer>
+			<a href="https://www.facebook.com"><img src="img/fb-logo.png" alt="facebook logo"></a>
+			<a href="https://www.twitter.com"><img src="img/twitter-logo.png" alt="twitter logo"></a>
+			<a href="https://www.plus.google.com"><img src="img/google-logo.png" alt="google plus logo"></a>
+			<a href="https://de.linkedin.com/"><img src="img/linked-logo.png" alt="linked in logo"></a>
+			<br>&#9400; 2017 All rights reserved by Bitchilla | <a href="#">Impressum</a>
+		</footer>
 	</body>
 
 </html>
