All sites with header and footer

--- a/faqH.html
+++ b/faqH.html
@@ -7,6 +7,7 @@
 
 		<link rel="stylesheet" href="css/GusFaq.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusTags.css"> <!-- Resource style -->
+		<link rel="stylesheet" href="css/JessGrid.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
 
 	</head>
@@ -37,7 +38,7 @@
 
 			<div class="row">
 
-					<nav class="col-5" >
+					<section class="col-5" >
 						<div class="myNav" style="position: fixed;">
 							<a class="button"  href="#first">Erste Schritte</a>
 							<a class="button" href="#support">Support</a>
@@ -46,7 +47,7 @@
 							<a class="button" href="#kontakt">Kontakt</a>
 						</div>
 
-					</nav>
+					</section>
 					<section class="col-7">
 						<h1 class="faqsection">Erste Schritte</h1>
 
