--- a/teamH.html
+++ b/teamH.html
@@ -7,6 +7,7 @@
 
 
 		<link rel="stylesheet" href="css/GusTeam.css"> <!-- Resource style -->
+		<link rel="stylesheet" href="css/JessGrid.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusTags.css"> <!-- Resource style -->
 		<link rel="stylesheet" href="css/GusGrid.css"> <!-- To specify the rows and columns properties-->
 
@@ -34,65 +35,76 @@
 			href="#nav-menue">&#9776;</a>
 		</header>
 		<main>
-			<section class="col-4">
-				<div class="profil">
-						<img class="imgteam" src="img/mari.png" alt="mari">
-					<h1 class="nameTeam">Mari Aceña</h1>
+			<section class="row">
+				<section class="col-4">
+					<div class="profil">
+							<img class="imgteam" src="img/mari.png" alt="mari">
+						<h1 class="nameTeam">Mari Aceña</h1>
+						<div class="row">
+						</div>
+						<div class="row">
+						</div>
+							<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					</div>
+					<div class="row">
+					</div>
 					<div class="row">
 					</div>
 					<div class="row">
 					</div>
+
+				</section>
+				<section class="col-4">
+					<div class="profil">
+						<img class="imgteam" src="img/Jess.png" alt="">
+						<h1 class="nameTeam">Jessica Hempel</h1>
+						<div class="row">
+						</div>
+						<div class="row">
+						</div>
 						<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-				</div>
-				<div class="row">
-				</div>
-				<div class="row">
-				</div>
-				<div class="row">
-				</div>
+						<div class="row">
+						</div>
+						<div class="row">
+						</div>
+						<div class="row">
+						</div>
+					</div>
+
+				</section>
+				<section class="col-4">
+					<div class="profil">
+						<img class="imgteam" src="img/Gustavo.png" alt="gustavo">
+						<h1 class="nameTeam">Gustavo Lastra</h1>
+						<div class="row">
+						</div>
+						<div class="row">
+						</div>
+						<p class="teamP" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					</div>
+					<div class="row">
+						<div class="col-12">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12">
+						</div>
+					</div>
+				</section>
 
 			</section>
-			<section class="col-4">
-				<div class="profil">
-					<img class="imgteam" src="img/Jess.png" alt="">
-					<h1 class="nameTeam">Jessica Hempel</h1>
-					<div class="row">
-					</div>
-					<div class="row">
-					</div>
-					<p class="teamP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-					<div class="row">
-					</div>
-					<div class="row">
-					</div>
-					<div class="row">
-					</div>
-				</div>
 
-			</section>
-			<section class="col-4">
-				<div class="profil">
-					<img class="imgteam" src="img/Gustavo.png" alt="gustavo">
-					<h1 class="nameTeam">Gustavo Lastra</h1>
-					<div class="row">
-					</div>
-					<div class="row">
-					</div>
-					<p class="teamP" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+			<div class="row">
+				<div class="col-12">
 				</div>
-				<div class="row">
-					<div class="col-12">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-12">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-12">
-					</div>
-				</div>
-			</section>
+			</div>
+
+
+
 
 		</main>
 
